vpc-module/igw.tf


resource "aws_internet_gateway" "my_igw" {
 vpc_id = aws_vpc.my_vpc.id
 
 tags = merge(var.common_tags, {
    Name   = format("%s-%s-%s-igw", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}
